@@ -5,6 +5,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.PageImpl;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -29,6 +30,7 @@ public class UnifiedService {
     private final RegionTypeHeatMapService regionTypeService;
     private final PovertyHeatMapService povertyService;
     private final PoliticalIncomeHeatMapService politicalIncomeService;
+    private final GinglesAnalysisRepository ginglesAnalysisRepository;
 
     public UnifiedService(
             CongressionalDistrictRepository congressionalDistrictRepository,
@@ -41,7 +43,7 @@ public class UnifiedService {
             EconomicHeatMapService economicService,
             RegionTypeHeatMapService regionTypeService,
             PovertyHeatMapService povertyService,
-            PoliticalIncomeHeatMapService politicalIncomeService) {
+            PoliticalIncomeHeatMapService politicalIncomeService, GinglesAnalysisRepository ginglesAnalysisRepository) {
         this.congressionalDistrictRepository = congressionalDistrictRepository;
         this.precinctRepository = precinctRepository;
         this.stateRepository = stateRepository;
@@ -53,6 +55,7 @@ public class UnifiedService {
         this.regionTypeService = regionTypeService;
         this.povertyService = povertyService;
         this.politicalIncomeService = politicalIncomeService;
+        this.ginglesAnalysisRepository = ginglesAnalysisRepository;
     }
     //Use case #1
     public List<StateListItem> getStateList() {
@@ -62,85 +65,317 @@ public class UnifiedService {
         State state = stateRepository.findByPropertiesName(stateName);
         return stateMapper.toStatePropertiesDTO(state);
     }
-    public GeometryDTO getStateGeometry(String stateName){
+    public FeatureDTO getStateGeometry(String stateName) {
         State state = stateRepository.findByPropertiesName(stateName);
-        return stateMapper.toStateGeometryDTO(state);
+        return stateMapper.toFeatureDTO(state);
     }
     //Use case #2
-    public List<CongressionalDistrictMapDTO> getCongressionalDistrictsMaps(int stateId){
-        List<CongressionalDistrict> congressionalDistricts = congressionalDistrictRepository.findByPropertiesStateId(stateId);
-        return congressionalDistricts.stream()
-        .map(congressionalDistrictMapper::toMapDTO)
-        .toList();
+    public FeatureCollectionDTO getCongressionalDistrictsMaps(int stateId) {
+        List<CongressionalDistrict> districts = congressionalDistrictRepository.findByPropertiesStateId(stateId);
+        List<FeatureDTO> features = districts.stream()
+                .map(congressionalDistrictMapper::toFeatureDTO)
+                .collect(Collectors.toList());
+
+        FeatureCollectionDTO featureCollection = new FeatureCollectionDTO();
+        featureCollection.setFeatures(features);
+        return featureCollection;
     }
     //Use case #3
     public StateSummaryDTO getStateSummary(String stateName){
         State state = stateRepository.findByPropertiesName(stateName);
         return stateMapper.toStateSummaryDTO(state);
     }
-    //Use case #4-7
-    public PaginatedResponse<PrecinctHeatMapDTO> getCombinedPrecinctHeatMap(int stateId, int page, int size) {
+    //Use case 4-7
+    public PaginatedFeatureCollectionDTO getPrecinctGeometries(int stateId, int page, int size) {
         System.out.println("State ID is " + stateId);
         Pageable pageable = PageRequest.of(page, size);
         Page<Precinct> precinctsPage = precinctRepository.findByPropertiesStateId(stateId, pageable);
         System.out.println("Number of precincts are " + precinctsPage.getNumberOfElements());
-
-        // List of all demographic groups
-        List<String> demographicGroups = Arrays.asList(
-            "white",
-            "black",
-            "hispanic",
-            "asian",
-            "american_indian_alaska_native",
-            "native_hawaiian_pacific_islander",
-            "multiracial",
-            "other"
-        );
-
-        List<PrecinctHeatMapDTO> combinedData = precinctsPage.stream()
+    
+        List<FeatureDTO> features = precinctsPage.stream()
             .map(precinct -> {
-                PrecinctHeatMapDTO dto = precinctMapper.toPrecinctHeatMapDTO(precinct);
-
-                // Calculate and set demographic data
-                Map<String, DemographicHeatData> demographicDataMap = demographicService.calculateDemographicData(precinct, demographicGroups);
-                dto.setDemographicDataMap(demographicDataMap);
-
-                // Calculate and set economic data
-                EconomicHeatData economicData = economicService.calculateEconomicData(precinct);
-                dto.setEconomicData(economicData);
-
-                // Calculate and set region type data
-                RegionTypeHeatData regionTypeData = regionTypeService.calculateRegionTypeData(precinct);
-                dto.setRegionTypeData(regionTypeData);
-
-                // Calculate and set poverty data
-                PovertyHeatData povertyData = povertyService.calculatePovertyData(precinct);
-                dto.setPovertyData(povertyData);
-
-                // Calculate and set political income data
-                PoliticalIncomeHeatData politicalIncomeData = politicalIncomeService.calculatePoliticalIncomeData(precinct);
-                dto.setPoliticalIncomeData(politicalIncomeData);
-
+                // Map to FeatureDTO with only geometry and minimal properties
+                Map<String, Object> properties = new HashMap<>();
+                properties.put("stateId", precinct.getProperties().getStateId());
+                properties.put("precinctKey", precinct.getProperties().getSrPrecKey());
+    
+                FeatureDTO feature = new FeatureDTO();
+                feature.setGeometry(precinctMapper.toGeometryDTO(precinct.getGeometry()));
+                feature.setProperties(properties);
+                return feature;
+            })
+            .collect(Collectors.toList());
+    
+        FeatureCollectionDTO featureCollection = new FeatureCollectionDTO();
+        featureCollection.setFeatures(features);
+    
+        // Create PaginatedFeatureCollectionDTO
+        PaginatedFeatureCollectionDTO paginatedResponse = new PaginatedFeatureCollectionDTO();
+        paginatedResponse.setPageNumber(precinctsPage.getNumber());
+        paginatedResponse.setPageSize(precinctsPage.getSize());
+        paginatedResponse.setTotalElements(precinctsPage.getTotalElements());
+        paginatedResponse.setTotalPages(precinctsPage.getTotalPages());
+        paginatedResponse.setFeatureCollection(featureCollection);
+    
+        return paginatedResponse;
+    }
+    //Use Case #4
+    public DemographicHeatMapDTO getDemographicHeatMapData(int stateId, String demographicGroup) {
+        List<Precinct> precincts = precinctRepository.findByPropertiesStateId(stateId);
+    
+        List<DemographicHeatDataDTO> dataList = precincts.stream()
+            .map(precinct -> {
+                DemographicHeatDataDTO data = demographicService.calculateDemographicData(
+                    precinct,
+                    Arrays.asList(demographicGroup)
+                ).get(demographicGroup);
+    
+                DemographicHeatDataDTO dto = new DemographicHeatDataDTO();
+                dto.setPrecinctKey(precinct.getProperties().getSrPrecKey());
+                dto.setPercentage(data.getPercentage());
+                dto.setBin(data.getBin());
+                dto.setColor(data.getColor());
                 return dto;
             })
             .collect(Collectors.toList());
-
-        // Legends
-        Map<String, Map<String, String>> legends = new HashMap<>();
-        legends.put("demographicLegend", demographicService.getLegend());
-        legends.put("economicLegend", economicService.getLegend());
-        legends.put("regionTypeLegend", regionTypeService.getLegend());
-        legends.put("povertyLegend", povertyService.getLegend());
-        legends.put("politicalIncomeLegend", politicalIncomeService.getLegend());
-
-        return new PaginatedResponse<>(
-            combinedData,
-            precinctsPage.getNumber(),
-            precinctsPage.getSize(),
-            precinctsPage.getTotalElements(),
-            precinctsPage.getTotalPages(),
-            legends
-        );
+    
+        Map<String, String> legend = demographicService.getLegend();
+    
+        DemographicHeatMapDTO response = new DemographicHeatMapDTO();
+        response.setData(dataList);
+        response.setLegend(legend);
+        return response;
     }
+    //Use case 5
+    public EconomicHeatMapDTO getEconomicHeatMapData(int stateId) {
+        List<Precinct> precincts = precinctRepository.findByPropertiesStateId(stateId);
+    
+        List<EconomicHeatDataDTO> dataList = precincts.stream()
+            .map(precinct -> {
+                EconomicHeatDataDTO data = economicService.calculateEconomicData(precinct);
+    
+                EconomicHeatDataDTO dto = new EconomicHeatDataDTO();
+                dto.setPrecinctKey(precinct.getProperties().getSrPrecKey());
+                dto.setMedianIncome(data.getMedianIncome());
+                dto.setBin(data.getBin());
+                dto.setColor(data.getColor());
+                return dto;
+            })
+            .collect(Collectors.toList());
+    
+        Map<String, String> legend = economicService.getLegend();
+    
+        EconomicHeatMapDTO response = new EconomicHeatMapDTO();
+        response.setData(dataList);
+        response.setLegend(legend);
+        return response;
+    }
+    //Also use case 5
+    public RegionTypeHeatMapDTO getRegionTypeHeatMapData(int stateId) {
+        List<Precinct> precincts = precinctRepository.findByPropertiesStateId(stateId);
+    
+        List<RegionTypeHeatDataDTO> dataList = precincts.stream()
+            .map(precinct -> {
+                RegionTypeHeatDataDTO data = regionTypeService.calculateRegionTypeData(precinct);
+    
+                RegionTypeHeatDataDTO dto = new RegionTypeHeatDataDTO();
+                dto.setPrecinctKey(precinct.getProperties().getSrPrecKey());
+                dto.setType(data.getType());
+                dto.setColor(data.getColor());
+                return dto;
+            })
+            .collect(Collectors.toList());
+    
+        Map<String, String> legend = regionTypeService.getLegend();
+    
+        RegionTypeHeatMapDTO response = new RegionTypeHeatMapDTO();
+        response.setData(dataList);
+        response.setLegend(legend);
+        return response;
+    }
+    //Use case 6
+    public PovertyHeatMapDTO getPovertyHeatMapData(int stateId) {
+        List<Precinct> precincts = precinctRepository.findByPropertiesStateId(stateId);
+    
+        List<PovertyHeatDataDTO> dataList = precincts.stream()
+            .map(precinct -> {
+                PovertyHeatDataDTO data = povertyService.calculatePovertyData(precinct);
+    
+                PovertyHeatDataDTO dto = new PovertyHeatDataDTO();
+                dto.setPrecinctKey(precinct.getProperties().getSrPrecKey());
+                dto.setPovertyPercentage(data.getPovertyPercentage());
+                dto.setBin(data.getBin());
+                dto.setColor(data.getColor());
+                return dto;
+            })
+            .collect(Collectors.toList());
+    
+        Map<String, String> legend = povertyService.getLegend();
+    
+        PovertyHeatMapDTO response = new PovertyHeatMapDTO();
+        response.setData(dataList);
+        response.setLegend(legend);
+        return response;
+    }
+    //Use case 7
+    public PoliticalIncomeHeatMapDTO getPoliticalIncomeHeatMapData(int stateId) {
+        List<Precinct> precincts = precinctRepository.findByPropertiesStateId(stateId);
+    
+        List<PoliticalIncomeHeatDataDTO> dataList = precincts.stream()
+            .map(precinct -> {
+                PoliticalIncomeHeatDataDTO data = politicalIncomeService.calculatePoliticalIncomeData(precinct);
+    
+                PoliticalIncomeHeatDataDTO dto = new PoliticalIncomeHeatDataDTO();
+                dto.setPrecinctKey(precinct.getProperties().getSrPrecKey());
+                dto.setMedianIncome(data.getMedianIncome());
+                dto.setBin(data.getBin());
+                dto.setColor(data.getColor());
+                dto.setDominantParty(data.getDominantParty());
+                return dto;
+            })
+            .collect(Collectors.toList());
+    
+        Map<String, String> legend = politicalIncomeService.getLegend();
+    
+        PoliticalIncomeHeatMapDTO response = new PoliticalIncomeHeatMapDTO();
+        response.setData(dataList);
+        response.setLegend(legend);
+        return response;
+    }
+    
+    
+    
+    
+    
+    //Use Case #8-9
+    public FeatureCollectionDTO getDistrictTableMap(int stateId) {
+        // Fetch all districts for the given state
+        List<CongressionalDistrict> districts = congressionalDistrictRepository.findByPropertiesStateId(stateId);
+    
+        // Map districts to FeatureDTOs
+        List<FeatureDTO> features = districts.stream()
+            .map(district -> {
+                // Map to CongressionalRepresentationDTO
+                CongressionalRepresentationDTO representationDTO = congressionalDistrictMapper.toRepresentationDTO(district);
+    
+                // Map to FeatureDTO
+                return congressionalDistrictMapper.toFeatureDTO(district, representationDTO);
+            })
+            .collect(Collectors.toList());
+    
+        // Create FeatureCollectionDTO
+        FeatureCollectionDTO featureCollection = new FeatureCollectionDTO();
+        featureCollection.setFeatures(features);
+    
+        return featureCollection;
+    }
+
+    //Use case #12
+    public List<RaceGinglesDTO> getRaceGinglesData(int stateId, String racialGroup) {
+        // Fetch GinglesAnalysis entries for the specified state and "regular" analysis type
+        List<GinglesAnalysis> analyses = ginglesAnalysisRepository.findByStateIdAndAnalysisType(stateId, "regular");
+        String databaseField = RacialCategoryMapper.getDatabaseField(racialGroup);
+        if (databaseField == null) {
+            throw new IllegalArgumentException("Invalid racial group: " + racialGroup);
+        }
+    
+        
+        long relevantPrecincts = analyses.stream()
+        .filter(analysis -> databaseField.equalsIgnoreCase((String) analysis.getData().get("Race_Column")))
+        .count();
+        System.out.println("The number of precincts for the racial group " + racialGroup + " are: " + relevantPrecincts);
+        return analyses.stream()
+            .filter(analysis -> databaseField.equalsIgnoreCase((String) analysis.getData().get("Race_Column")))
+            .map(analysis -> {
+                double pctRace = Double.parseDouble((String) analysis.getData().get("PCT_RACE"));
+                double pctDem = Double.parseDouble((String) analysis.getData().get("PCT_DEM"));
+                double pctRep = Double.parseDouble((String) analysis.getData().get("PCT_REP"));
+                String dominantParty = pctDem > pctRep ? "Blue" : "Red";
+    
+                RaceGinglesDTO dto = new RaceGinglesDTO();
+                dto.setPrecinctKey(analysis.getPrecinctKey());
+                dto.setRaceXAxis(pctRace);
+                dto.setDeomcracticShareYAxis(pctDem);
+                dto.setRepublicanShareYaxis(pctRep);
+                dto.setDominantPartyColor(dominantParty);
+                return dto;
+            })
+            .collect(Collectors.toList());
+    }
+    
+    
+    //Use case #13
+    public List<IncomeGinglesDTO> getIncomeGinglesData(int stateId, String regionType) {
+        // Fetch GinglesAnalysis entries for the specified state and "income" analysis type
+        List<GinglesAnalysis> analyses = regionType == null
+            ? ginglesAnalysisRepository.findByStateIdAndAnalysisType(stateId, "income")
+            : ginglesAnalysisRepository.findByStateIdAndRegionType(stateId, regionType);
+        
+        System.out.println("Number of precincts are "+ analyses.size());
+        // Map to IncomeGinglesDTO
+        return analyses.stream()
+            .map(analysis -> {
+                double medianIncome = Double.parseDouble((String) analysis.getData().get("MEDN_INC"));
+                double pctDem = Double.parseDouble((String) analysis.getData().get("PCT_DEM"));
+                double pctRep = Double.parseDouble((String) analysis.getData().get("PCT_REP"));
+                String dominantParty = pctDem > pctRep ? "Blue" : "Red";
+    
+                IncomeGinglesDTO dto = new IncomeGinglesDTO();
+                dto.setPrecinctKey(analysis.getPrecinctKey());
+                dto.setMedianIncomeXaxis(medianIncome);
+                dto.setDemocraticVoteShareYaxis(pctDem);
+                dto.setRepublicanVoteShareYaxis(pctRep);
+                dto.setDominantPartyColor(dominantParty);
+                dto.setRegionType(analysis.getRegionType());
+                return dto;
+            })
+            .collect(Collectors.toList());
+    }
+    //Use case #14
+    public List<IncomeRaceGinglesDTO> getIncomeRaceGinglesData(int stateId, String racialGroup) {
+        // Fetch GinglesAnalysis entries for the specified state and "income_race" analysis type
+        List<GinglesAnalysis> incomeRaceAnalyses = ginglesAnalysisRepository.findByStateIdAndAnalysisType(stateId, "income_race");
+        String databaseField = RacialCategoryMapper.getDatabaseField(racialGroup);
+        if (databaseField == null) {
+            throw new IllegalArgumentException("Invalid racial group: " + racialGroup);
+        }
+        
+        
+        long relevantPrecincts = incomeRaceAnalyses.stream()
+        .filter(analysis -> databaseField.equalsIgnoreCase((String) analysis.getData().get("Race_Column")))
+        .count();
+        System.out.println("The number of precincts for the racial group " + racialGroup + " are: " + relevantPrecincts);
+        // Filter data by the specified racial group
+        return incomeRaceAnalyses.stream()
+            .filter(analysis -> databaseField.equalsIgnoreCase((String) analysis.getData().get("Race_Column")))
+            .map(analysis -> {
+                double pctRaceIncome = Double.parseDouble((String) analysis.getData().get("PCT_RACE_INC"));
+                double pctDem = Double.parseDouble((String) analysis.getData().get("PCT_DEM"));
+                double pctRep = Double.parseDouble((String) analysis.getData().get("PCT_REP"));
+    
+                // Determine the dominant party based on vote percentages
+                String dominantParty = pctDem > pctRep ? "Blue" : "Red";
+    
+                // Map to IncomeRaceGinglesDTO
+                IncomeRaceGinglesDTO dto = new IncomeRaceGinglesDTO();
+                dto.setPrecinctKey(analysis.getPrecinctKey());
+                dto.setCompositeIndexXaxis(pctRaceIncome); 
+                dto.setDemocraticVoteShareYaxis(pctDem);
+                dto.setRepublicanVoteShareYaxis(pctRep); 
+                dto.setDominantPartyColor(dominantParty); 
+                return dto;
+            })
+            .collect(Collectors.toList());
+    }
+    
+    //Use case #15
+    public List<GinglesTableDTO> getGinglesTableData(int stateId) {
+        List<Precinct> precincts = precinctRepository.findByPropertiesStateId(stateId);
+        return precincts.stream()
+                .map(precinctMapper::toGinglesTableDTO)
+                .collect(Collectors.toList());
+    }
+    
+    
 
 }
